# Adept-2

./: .gitignore  .travis.yml  AUTHORS  Adept2Config.cmake  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  config_platform_independent.h.in  configure.ac  makefile_include.in
adept/: Array.cpp  Makefile.am  Minimizer.cpp  Stack.cpp  StackStorageOrig.cpp  Stack_openmp.cpp  Storage.cpp  cppblas.cpp  cpplapack.h  index.cpp  inv.cpp  jacobian.cpp  line_search.cpp  minimize_conjugate_gradient.cpp  minimize_levenberg_marquardt.cpp  minimize_limited_memory_bfgs.cpp  settings.cpp  solve.cpp  vector_utilities.cpp
benchmark/: Makefile.am  advection_schemes.h  advection_schemes_AD.cpp  advection_schemes_AD.h  advection_schemes_K.cpp  advection_schemes_K.h  animate.cpp  autodiff_benchmark.cpp  differentiator.h  math_benchmark.cpp  matrix_benchmark.cpp  nx.h
doc/: Makefile  Makefile.am  README  adept_documentation.tex  adept_reference.tex
include/: Makefile.am  Timer.h  adept.h  adept_arrays.h  adept_fortran.h  adept_half.h  adept_optimize.h  create_adept_source_header
include/adept/: Active.h  ActiveConstReference.h  ActiveReference.h  Allocator.h  Array.h  ArrayWrapper.h  BasicArray.h  BasicArray_traits.h  BinaryOperation.h  Expression.h  ExpressionSize.h  FixedArray.h  GradientIndex.h  IndexedArray.h  Minimizer.h  Optimizable.h  Packet.h  RangeIndex.h  ScratchVector.h  SpecialMatrix.h  Stack.h  StackStorage.h  StackStorageOrig.h  StackStorageOrigStl.h  Statement.h  Storage.h  UnaryOperation.h  VectorOrientation.h  array_shortcuts.h  base.h  contiguous_matrix.h  cppblas.h  eval.h  exception.h  fastexp.h  interp.h  inv.h  matmul.h  noalias.h  oriented_vector.h  (+11 more)
m4/: adept.m4
test/: CMakeLists.txt  Makefile  README  algorithm.cpp  algorithm.h  algorithm_with_and_without_ad.h  rosenbrock_banana_function.cpp  run_tests.sh  simulate_radiances.cpp  simulate_radiances.h  state.cpp  state.h  test_adept.cpp  test_adept_with_and_without_ad.cpp  test_array_derivatives.cpp  test_array_speed.cpp  test_arrays.cpp  test_basic_array.cpp  test_checkpoint.cpp  test_constructors.cpp  test_derivatives.cpp  test_fastexp.cpp  test_fixed_arrays.cpp  test_gsl_interface.cpp  test_interp.cpp  test_minimizer.cpp  test_misc.cpp  test_no_lib.cpp  test_packet_operations.cpp  test_radiances.cpp  test_radiances_array.cpp  test_reduce_active.cpp  test_thread_safe.cpp  test_thread_safe_arrays.cpp
