lib_LTLIBRARIES = libadept.la
libadept_la_SOURCES = Array.cpp Stack.cpp StackStorageOrig.cpp \
	jacobian.cpp Storage.cpp index.cpp settings.cpp \
	cppblas.cpp cpplapack.h solve.cpp inv.cpp \
	vector_utilities.cpp Minimizer.cpp \
	minimize_limited_memory_bfgs.cpp minimize_levenberg_marquardt.cpp \
	minimize_conjugate_gradient.cpp line_search.cpp

libadept_la_CPPFLAGS = -I@top_srcdir@/include
